--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-    "connectionString": "mongodb://localhost/test"
+    "connectionString": "mongodb://ssvitanov:1NUTivajA@ds343127.mlab.com:43127/heroku_fmlbp0vz"
 }
